# ZisaMPI

./: CMakeLists.txt  README.md  annotated.html  annotated_dup.js  building_8md.html  classes.html  classzisa_1_1mpi_1_1Request-members.html  classzisa_1_1mpi_1_1Request.html  classzisa_1_1mpi_1_1Request.js  cmake_8md.html  cmake_usage.html  conan_8md.html  contributing_8md.html  dependencies_8md.html  dir_0382706124a922c93063f1ceb6d69b1f.html  dir_0382706124a922c93063f1ceb6d69b1f.js  dir_3b1b376102d547755767b6d0a85cc805.html  dir_3b1b376102d547755767b6d0a85cc805.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_93d914d239eb113305c9bd92855ad21e.html  dir_93d914d239eb113305c9bd92855ad21e.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_ecd84862e24137e5a2bca59724cc38bf.html  dir_ecd84862e24137e5a2bca59724cc38bf.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  mainpage_8md.html  md_building.html  md_cmake.html  md_conan.html  md_contributing.html  md_dependencies.html  menudata.js  mpi_8cpp.html  mpi_8cpp.js  (+23 more)
.github/workflows/: basic_integrity_checks.yml
cmake/: ZisaMPIConfig.cmake  warning_flags.cmake
fvm/src/zisa/mpi/: mpi.cpp
include/zisa/mpi/: mpi.hpp  mpi_decl.hpp  mpi_impl.hpp
include/zisa/parallelization/: mpi.hpp  mpi_decl.hpp  mpi_impl.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  (+5 more)
src/zisa/mpi/: CMakeLists.txt  mpi.cpp
src/zisa/parallelization/: mpi.cpp
